Fixed mantis not being displayed on mobile

--- a/css/mBugs.css
+++ b/css/mBugs.css
@@ -26,7 +26,7 @@
 #grasshopper.bugsMobile {background-position: calc(-100% * 7) calc(-100% * 3);}
 #cricket.bugsMobile {background-position: calc(-100% * 9) calc(-100% * 3);}
 #bellCricket.bugsMobile {background-position: calc(-100% * 0) calc(-100% * 7);}
-#mantis.bugsMobile {background-position: calc(-100% * 3) calc(-100% * 3);}
+#mantis.bugsMobile {background-position: calc(-100% * 2) calc(-100% * 3);}
 #orchidMantis.bugsMobile {background-position: calc(-100% * 0) calc(-100% * 2);}
 #honeybee.bugsMobile {background-position: calc(-100% * 6) calc(-100% * 4);}
 #wasp.bugsMobile {background-position: calc(-100% * 8) calc(-100% * 1);}
